--- a/src/style.css
+++ b/src/style.css
@@ -1,7 +1,9 @@
 button{
     padding: 10px;
-    font-size: 16px;
+    font-size: 100%;
     border: none;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+    font-weight: 100;
     border-radius: 3px;
     cursor: pointer;
     background-color: #2fb634;
